Added IDA Star #6

--- a/8-Puzzle-Solver.ipynb
+++ b/8-Puzzle-Solver.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "import copy\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 3,
    "outputs": [
     {
      "name": "stdout",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 4,
    "outputs": [
     {
      "name": "stdout",
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 276,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "heuristic_method = input(\"Enter the desired Heuristic method: h1 or h2\")\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 277,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "class Mat2dict:\n",
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "class Heuristic:\n",
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 279,
+   "execution_count": 8,
    "outputs": [],
    "source": [
     "class Node:\n",
@@ -410,7 +410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 280,
+   "execution_count": 9,
    "outputs": [],
    "source": [
     "\n",
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 281,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "class Result:\n",
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 282,
+   "execution_count": 11,
    "outputs": [],
    "source": [
     "class NeighborsCalculator:\n",
@@ -573,18 +573,263 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 12,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inital Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  0  5\n",
+      "2  7  8  6\n",
+      "Result Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n",
+      "Expected Puzzle: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n",
+      "\n",
+      "Number of expanded nodes: 2\n",
+      "\n",
+      "step 1: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  0  5\n",
+      "2  7  8  6\n",
+      "step 2: \n",
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  0\n",
+      "2  7  8  6\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "initial_state = Node(input_puzzle)\n",
     "\n",
-    "PuzzleSolver(initial_state).solve()"
+    "PuzzleSolver(initial_state).solve()\n"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
-     "name": "#%%\n",
-     "is_executing": true
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### The puzzle solver IDA class:"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [],
+   "source": [
+    "\n",
+    "class PuzzleSolverIDA:\n",
+    "\n",
+    "    def __init__(self, start_node, iterate):\n",
+    "\n",
+    "        self.iterate = iterate\n",
+    "        self.final_state = None\n",
+    "        self.start_node = start_node\n",
+    "        self.depth = 0\n",
+    "        self.visited_nodes = set()\n",
+    "        self.expanded_nodes = 0\n",
+    "        self.f_cutoff = 0\n",
+    "\n",
+    "    def solve(self):\n",
+    "\n",
+    "        while True:\n",
+    "            self.f_cutoff += self.iterate\n",
+    "            queue = [self.start_node]\n",
+    "            self.visited_nodes.add(self.start_node.get_id())\n",
+    "\n",
+    "            while queue:\n",
+    "                self.expanded_nodes += 1\n",
+    "                node = heapq.heappop(queue)\n",
+    "                if node.current_puzzle == desired_output:\n",
+    "                    self.final_state = node\n",
+    "                    Result(self.final_state, self.expanded_nodes)\n",
+    "                    return True\n",
+    "\n",
+    "                if node.depth + 1 > self.depth:\n",
+    "                    self.depth = node.depth + 1\n",
+    "\n",
+    "                for neighbor in NeighborsCalculator(node).get_list_of_neighbors():\n",
+    "                    if not neighbor.get_id in self.visited_nodes:\n",
+    "                        if neighbor.f_function <= self.f_cutoff:\n",
+    "                            self.visited_nodes.add(neighbor.get_id())\n",
+    "                            heapq.heappush(queue, neighbor)\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Inital Puzzle: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  5  4\n",
+      "2  3  0  1\n",
+      "Result Puzzle: \n",
+      "   0  1  2\n",
+      "0  6  4  7\n",
+      "1  8  5  0\n",
+      "2  3  2  1\n",
+      "Expected Puzzle: \n",
+      "   0  1  2\n",
+      "0  6  4  7\n",
+      "1  8  5  0\n",
+      "2  3  2  1\n",
+      "\n",
+      "Number of expanded nodes: 2191847\n",
+      "\n",
+      "step 1: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  5  4\n",
+      "2  3  0  1\n",
+      "step 2: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  5  4\n",
+      "2  3  1  0\n",
+      "step 3: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  5  0\n",
+      "2  3  1  4\n",
+      "step 4: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  2  0  5\n",
+      "2  3  1  4\n",
+      "step 5: \n",
+      "   0  1  2\n",
+      "0  8  6  7\n",
+      "1  0  2  5\n",
+      "2  3  1  4\n",
+      "step 6: \n",
+      "   0  1  2\n",
+      "0  0  6  7\n",
+      "1  8  2  5\n",
+      "2  3  1  4\n",
+      "step 7: \n",
+      "   0  1  2\n",
+      "0  6  0  7\n",
+      "1  8  2  5\n",
+      "2  3  1  4\n",
+      "step 8: \n",
+      "   0  1  2\n",
+      "0  6  7  0\n",
+      "1  8  2  5\n",
+      "2  3  1  4\n",
+      "step 9: \n",
+      "   0  1  2\n",
+      "0  6  7  5\n",
+      "1  8  2  0\n",
+      "2  3  1  4\n",
+      "step 10: \n",
+      "   0  1  2\n",
+      "0  6  7  5\n",
+      "1  8  2  4\n",
+      "2  3  1  0\n",
+      "step 11: \n",
+      "   0  1  2\n",
+      "0  6  7  5\n",
+      "1  8  2  4\n",
+      "2  3  0  1\n",
+      "step 12: \n",
+      "   0  1  2\n",
+      "0  6  7  5\n",
+      "1  8  0  4\n",
+      "2  3  2  1\n",
+      "step 13: \n",
+      "   0  1  2\n",
+      "0  6  7  5\n",
+      "1  8  4  0\n",
+      "2  3  2  1\n",
+      "step 14: \n",
+      "   0  1  2\n",
+      "0  6  7  0\n",
+      "1  8  4  5\n",
+      "2  3  2  1\n",
+      "step 15: \n",
+      "   0  1  2\n",
+      "0  6  0  7\n",
+      "1  8  4  5\n",
+      "2  3  2  1\n",
+      "step 16: \n",
+      "   0  1  2\n",
+      "0  6  4  7\n",
+      "1  8  0  5\n",
+      "2  3  2  1\n",
+      "step 17: \n",
+      "   0  1  2\n",
+      "0  6  4  7\n",
+      "1  8  5  0\n",
+      "2  3  2  1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "True"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "initial_state = Node(input_puzzle)\n",
+    "\n",
+    "PuzzleSolverIDA(initial_state, 4).solve()\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
